# GIGA_NeXAS

./: CMakeLists.txt  Readme.md  build-Debug.bat  build-Release.bat  clear.bat  main.cpp  main.h
huffman/: CMakeLists.txt  huffman.cpp  huffman.h  huffmanDecoder.cpp  huffmanDecoder.h  huffmanEncoder.cpp  huffmanEncoder.h  huffmanNode.h
packFunc/: CMakeLists.txt  enc.hpp  packFunc.h  topack.cpp  unpack.cpp
quote/header/: zstd.h
